force-app/main/default/objects/Services__c/Services__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Services</label>
</CustomObject>