force-app/main/default/objects/Services__c/fields/BackCareRecordType__c.field-meta.xml
<CustomField>
    <fullName>BackCareRecordType__c</fullName>
    <label>BackCareRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>