force-app/main/default/objects/Services__c/fields/BackPackRecordType__c.field-meta.xml
<CustomField>
    <fullName>BackPackRecordType__c</fullName>
    <label>BackPackRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>