force-app/main/default/objects/Services__c/fields/BackPartsRecordType__c.field-meta.xml
<CustomField>
    <fullName>BackPartsRecordType__c</fullName>
    <label>BackPartsRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>