force-app/main/default/objects/Services__c/fields/BackRepairRecordType__c.field-meta.xml
<CustomField>
    <fullName>BackRepairRecordType__c</fullName>
    <label>BackRepairRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>