force-app/main/default/objects/Services__c/fields/BackShipRecordType__c.field-meta.xml
<CustomField>
    <fullName>BackShipRecordType__c</fullName>
    <label>BackShipRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>