force-app/main/default/objects/Services__c/fields/FBBMRecordType__c.field-meta.xml
<CustomField>
    <fullName>FBBMRecordType__c</fullName>
    <label>FBBMRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>