force-app/main/default/objects/Services__c/fields/ImpactChampionRecordType__c.field-meta.xml
<CustomField>
    <fullName>ImpactChampionRecordType__c</fullName>
    <label>ImpactChampionRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>