force-app/main/default/objects/Services__c/fields/ManaRecordType__c.field-meta.xml
<CustomField>
    <fullName>ManaRecordType__c</fullName>
    <label>ManaRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>