force-app/main/default/objects/Services__c/fields/RAASRecordType__c.field-meta.xml
<CustomField>
    <fullName>RAASRecordType__c</fullName>
    <label>RAASRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>